Changed Model resource to Diagram
